--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "google-oauth-local",
+  "name": "google-oauth-vercel",
   "version": "1.0.0",
-  "description": "Aplikasi login Google untuk localhost",
-  "main": "server.js",
+  "description": "Aplikasi login Google untuk Vercel",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "vercel dev",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
@@ -15,6 +14,6 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "@vercel/node": "^2.15.3"
   }
 }
