--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "google-oauth-vercel",
-  "version": "1.0.0",
-  "description": "Aplikasi login Google untuk Vercel",
+  "name": "google-oauth-vercel-fixed",
+  "version": "1.0.1",
+  "description": "Aplikasi login Google untuk Vercel (Fixed)",
   "scripts": {
     "start": "vercel dev",
     "deploy": "vercel --prod"
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@vercel/node": "^2.15.3"
+    "@vercel/node": "^2.15.3",
+    "nodemon": "^3.0.2"
   }
 }
