--- a/vercel.json
+++ b/vercel.json
@@ -39,5 +39,16 @@
       "src": "/(.*)",
       "dest": "/public/index.html"
     }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self' https://accounts.google.com; style-src 'self' 'unsafe-inline'; img-src 'self' https://*.googleusercontent.com data:;"
+        }
+      ]
+    }
   ]
 }
