--- a/vercel.json
+++ b/vercel.json
@@ -10,35 +10,14 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
-    {
-      "src": "/",
-      "dest": "/public/index.html"
-    },
-    {
-      "src": "/dashboard",
-      "dest": "/public/dashboard.html"
-    },
-    {
-      "src": "/auth/callback",
-      "dest": "/api/auth/callback.js"
-    },
-    {
-      "src": "/auth/verify",
-      "dest": "/api/auth/verify.js"
-    },
-    {
-      "src": "/style.css",
-      "dest": "/public/style.css"
-    },
-    {
-      "src": "/auth.js",
-      "dest": "/public/auth.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/index.html"
-    }
+  "rewrites": [
+    { "source": "/", "destination": "/public/index.html" },
+    { "source": "/dashboard", "destination": "/public/dashboard.html" },
+    { "source": "/auth/callback", "destination": "/api/auth/callback.js" },
+    { "source": "/auth/verify", "destination": "/api/auth/verify.js" },
+    { "source": "/style.css", "destination": "/public/style.css" },
+    { "source": "/auth.js", "destination": "/public/auth.js" },
+    { "source": "/(.*)", "destination": "/public/index.html" }
   ],
   "headers": [
     {
