--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,41 @@
     {
       "src": "api/auth/*.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/*.html",
+      "use": "@vercel/static"
     }
   ],
-  "rewrites": [
-    { "source": "/", "destination": "/index.html" },
-    { "source": "/dashboard", "destination": "/dashboard.html" },
-    { "source": "/auth/callback", "destination": "/api/auth/callback.js" },
-    { "source": "/auth/verify", "destination": "/api/auth/verify.js" },
-    { "source": "/(.*)", "destination": "/index.html" }
+  "routes": [
+    {
+      "src": "/",
+      "dest": "/public/index.html"
+    },
+    {
+      "src": "/dashboard",
+      "dest": "/public/dashboard.html"
+    },
+    {
+      "src": "/auth/callback",
+      "dest": "/api/auth/callback.js"
+    },
+    {
+      "src": "/auth/verify",
+      "dest": "/api/auth/verify.js"
+    },
+    {
+      "src": "/style.css",
+      "dest": "/public/style.css"
+    },
+    {
+      "src": "/auth.js",
+      "dest": "/public/auth.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/index.html"
+    }
   ],
   "headers": [
     {
@@ -19,7 +46,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' https://accounts.google.com; style-src 'self' 'unsafe-inline'; img-src 'self' https://*.googleusercontent.com data:;"
+          "value": "default-src 'self'; script-src 'self' https://accounts.google.com; style-src 'self' 'unsafe-inline'; img-src 'self' https://*.googleusercontent.com data:; connect-src 'self' https://egunkarii.vercel.app;"
         }
       ]
     }
