--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
-  "name": "google-oauth-vercel-final",
+  "name": "google-login-app",
   "version": "1.0.0",
-  "description": "Aplikasi login Google untuk Vercel (Final)",
+  "main": "server.js",
   "scripts": {
-    "start": "vercel dev",
-    "dev": "vercel dev",
-    "deploy": "vercel --prod"
+    "start": "node server.js"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.6",
+    "axios": "^1.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "google-auth-library": "^9.10.0",
-    "jsonwebtoken": "^9.0.2"
-  },
-  "devDependencies": {
-    "@vercel/node": "^2.15.3",
-    "nodemon": "^3.0.2"
+    "jsonwebtoken": "^9.0.0",
+    "cookie-parser": "^1.4.6"
   }
 }
