--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,19 @@
 {
   "version": 2,
-  "builds": [{ "src": "pages/api/*.js", "use": "@vercel/node" }]
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
+  ]
 }
