--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "google-login-page",
+  "name": "google-login-app",
   "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "cookie": "^0.6.0",
-    "jsonwebtoken": "^9.0.2",
-    "next": "13.4.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "axios": "^1.6.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
