--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/$1",
+      "dest": "/server.js",
       "methods": ["GET", "POST"]
     },
     {
