--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server.js",
-      "methods": ["GET", "POST"]
+      "dest": "/server.js"
     },
     {
       "src": "/(.*)",
