--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "google-login-app",
+  "name": "egunkari-app",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -9,11 +9,11 @@
   "dependencies": {
     "axios": "^1.6.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
     "firebase-admin": "^11.11.0",
-    "cors": "^2.8.5"
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
