--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "egunkari-app",
+  "name": "egunkari",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "Platform untuk penulis puisi dan cerita",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "firebase-admin": "^11.11.0",
-    "jsonwebtoken": "^9.0.0"
+    "googleapis": "^120.0.0",
+    "cookie-parser": "^1.4.6",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.1",
+    "uuid": "^9.0.0"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+  "engines": {
+    "node": "18.x"
   }
 }
