--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "egunkari",
   "version": "1.0.0",
-  "description": "Platform untuk penulis puisi dan cerita",
+  "description": "Platform penulisan kreatif untuk puisi, cerita, dan karya tulis lainnya",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -11,10 +11,11 @@
     "googleapis": "^120.0.0",
     "cookie-parser": "^1.4.6",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.1",
-    "uuid": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3"
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   }
 }
